[breaking] only show recordings visible to everyone if configured in env

--- a/app.json
+++ b/app.json
@@ -22,6 +22,10 @@
     },
     "SLACK_URL": {
       "description": "Slack incoming webhook URL, create this in your Slack custom integrations"
+    },
+    "EVERYONE": {
+      "description": "Set to TRUE to include emails and notes visible to everyone (not just HIGHRISE_GROUPS) in webhooks",
+      "value": "FALSE"
     }
   }
 }
