--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
   "bugs": {
     "url": "https://github.com/digidem/highrise-slack-webhook/issues"
   },
-  "homepage": "https://github.com/digidem/highrise-slack-webhook#readme"
+  "homepage": "https://github.com/digidem/highrise-slack-webhook#readme",
+  "devDependencies": {
+    "@types/debug": "^4.1.7",
+    "@types/mailparser": "^3.4.0",
+    "@types/xml2js": "^0.4.11",
+    "typescript": "^4.9.4"
+  }
 }
