--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type": "tsc"
   },
   "keywords": [
     "highrise",
@@ -15,6 +16,9 @@
   "author": "Gregor MacLennan",
   "license": "MIT",
   "dependencies": {
+    "@types/debug": "^4.1.7",
+    "@types/mailparser": "^3.4.0",
+    "@types/xml2js": "^0.4.11",
     "camelcase": "^7.0.1",
     "debug": "^4.3.4",
     "dotenv": "^4.0.0",
@@ -32,9 +36,6 @@
   },
   "homepage": "https://github.com/digidem/highrise-slack-webhook#readme",
   "devDependencies": {
-    "@types/debug": "^4.1.7",
-    "@types/mailparser": "^3.4.0",
-    "@types/xml2js": "^0.4.11",
     "typescript": "^4.9.4"
   }
 }
