--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "highrise-slack-webhook",
+  "name": "highrise-slack-sync",
   "version": "1.0.0",
-  "description": "Send notifications to Slack when a Highrise note or email is added",
-  "main": "index.js",
+  "description": "Send notifications to a Slack webhook for Highrise notes, emails and comments",
+  "main": "src/index.js",
+  "bin": "bin/sync.js",
+  "types": "dist",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "type": "tsc"
+    "type": "tsc",
+    "prepublishOnly": "npm run type"
   },
   "keywords": [
     "highrise",
@@ -24,7 +27,6 @@
     "dotenv": "^4.0.0",
     "ky-universal": "^0.11.0",
     "mailparser": "^3.6.3",
-    "redis": "^2.8.0",
     "xml2js": "^0.4.23"
   },
   "repository": {
