--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
     "checkJs": false,
     "declaration": true,
     "emitDeclarationOnly": true,
+    "declarationDir": "dist",
+    "declarationMap": true,
     "typeRoots": ["types", "node_modules/@types"]
   },
-  "include": ["index.js", "lib/*.js"],
-  "exclude": ["node_modules", "**/*.d.ts"]
+  "include": ["src/*.js"],
+  "exclude": ["node_modules"]
 }
